[26] Patched test cases
Bug: https://github.com/eclipse-capella/capella-for-syson/issues/26
Signed-off-by: Thibault Béziers la Fosse <thibault.beziers-la-fosse@obeo.fr>